# director5

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  biome.json  pyproject.toml  run.sh
.github/actions/ci-setup/: action.yml  uv-sync.sh
.github/workflows/: ci.yml  deploy-docs.yml
dev/docker/: Dockerfile  Dockerfile.firecracker  Dockerfile.main  compose.yaml  docker-compose.yml  docker-entrypoint.sh  firecracker.sh  install-firecracker.sh  install-linux.sh  traefik.yml
dev/sites/python/: Dockerfile  main.py  run.sh
dev/sites/python/public/: about.html  index.html
dev/sites/static/public/: index.html  style.css
dev/tailwind/: build-tailwind.sh  enable-pycharm-autocomplete.sh  tailwind.config.js
docker/: Dockerfile  compose.yml
docs/: Justfile
docs/source/: conf.py  contributing.rst  index.md  index.rst  usage.md  usage.rst
docs/source/contributing/: architecture.md  dependencies.rst  developing.md  guidelines.rst  ide-guide.md  ide-guide.rst  setup.md  setup.rst  tips.rst
docs/source/contributing/architecture/: orchestrator.md  prereqs.md
docs/source/contributing/architecture/assets/: director-balancer.dot  request.dot
docs/source/contributing/developing/: extensions.md  guidelines.md  setup.md  tips.md
manager/: conftest.py  manage.py  pyproject.toml
manager/director/: asgi.py  celery.py  djtypes.py  urls.py  wsgi.py
manager/director/apps/: context_processors.py
manager/director/apps/auth/: apps.py  tests.py  urls.py  views.py
manager/director/apps/marketplace/: apps.py  urls.py  views.py
manager/director/apps/sites/: actions.py  admin.py  apps.py  appserver.py  consumers.py  forms.py  models.py  operations.py  parser.py  tasks.py  tests.py  urls.py  views.py
manager/director/apps/sites/management/commands/: create_dev_data.py
manager/director/apps/sites/migrations/: 0001_initial.py  0002_remove_dockerimage_operating_system_and_more.py  0003_operation_action.py  0003_site_placeholder_color.py  0004_alter_site_mode.py  0005_delete_dockeraction_delete_dockerimage.py  0005_merge_20241231_0954.py  0006_action_user_message.py  0006_remove_site_placeholder_color.py  0007_site_placeholder_color.py  max_migration.txt
manager/director/apps/sites/tests/: framework.py  test_actions.py
manager/director/apps/tailwindcss/: apps.py
manager/director/apps/tailwindcss/static_src/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
manager/director/apps/users/: apps.py  models.py  shortcuts.py
manager/director/apps/users/management/commands/: create_debug_users.py
manager/director/apps/users/migrations/: 0001_user_model.py  0002_user_groups_user_user_permissions.py  max_migration.txt
manager/director/settings/: __init__.py  secret.sample  types.py
manager/director/static/favicon/: site.webmanifest
manager/director/static/general/: directorlib.js
manager/director/static/tailwind/: build.css  input.css
manager/director/templates/: base.html  base_with_nav.html  components.html  meta.html
manager/director/templates/auth/: login.html  password-login.html
manager/director/templates/components/: dropdown.html  input.html
manager/director/templates/components/reusable/: dialog.html  snackbar.html  tooltip.html
manager/director/templates/marketplace/: store.html
manager/director/templates/sites/: create.html  dashboard.html  index.html
manager/director/templates/sites/partials/: create_form.html
manager/manager/: asgi.py  tests.py  urls.py  wsgi.py
manager/manager/settings/: __init__.py
orchestrator/: conftest.py  mypy.ini  pyproject.toml
orchestrator/orchestrator/: initial_setup.py  main.py  test_main.py
orchestrator/orchestrator/api/: router.py
orchestrator/orchestrator/api/database/: router.py
orchestrator/orchestrator/api/docker/: conversions.py  parsing.py  router.py  schema.py  services.py
orchestrator/orchestrator/api/docker/templates/: Dockerfile.j2  nginx.conf.j2  run-site.sh
orchestrator/orchestrator/api/docker_images/: router.py  schema.py
orchestrator/orchestrator/api/docker_images/templates/: Dockerfile.j2
orchestrator/orchestrator/api/files/: router.py
orchestrator/orchestrator/api/vm/: networking.py  router.py  schema.py  utils.py
orchestrator/orchestrator/core/: exceptions.py  schema.py  settings.py  utils.py
orchestrator/orchestrator/core/settings/: __init__.py
orchestrator/orchestrator/firecracker/: exceptions.py  models.py  subprocesses.py  utils.py  views.py
orchestrator/orchestrator/settings/: __init__.py
orchestrator/orchestrator/tests/: test_services.py
orchestrator/orchestrator/tests/main/: test_main.py
scripts/: create_debug_users.py
