[project]
name = "director5"
version = "0.1.0"
description = "A next generation website hosting platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "social-auth-app-django>=5.4.2",
    "typing-extensions>=4.12",
    "django-tailwind[reload]>=3.8.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "django-stubs[compatible-mypy]>=5.1.0",
    "furo>=2024.8.6",
    "mypy>=1.11.2",
    "myst-parser>=4.0.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.0.2",
    "pytest-xdist>=3.6.1",
]

[tool.uv.workspace]
members = ["manager", "orchestrator"]

[tool.ruff]
extend-exclude = [
  ".github",
  "dev",
  ".env",
  "env",
  "secret",
  "media",
  "migrations",
]

show-fixes = false
fix = true

line-length = 100

target-version = "py312"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-blind-except
    "BLE",
    # flake8-comprehensions
    "C4",
    # mccabe code complexity
    "C90",
    # pydocstyle
    "D",
    # flake8-django
    "DJ",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-boolean-trap
    "FBT",
    # isort
    "I",
    # pep8-naming
    "N",
    # Pylint
    "PL",
    # Pytest
    "PT",
    # flake8-use-pathlib
    "PTH",
    # pygrep hooks
    "PGH",
    # flake8-return
    "RET",
    # ruff
    "RUF",
    # pyupgrade
    "UP",
]
ignore = [
  # magic number comparison
  "PLR2004",
  # pytest fixture not returning anything should have underscore
  "PT004",
  # mutable class attrs annotated as typing.ClassVar
  "RUF012",
  # missing docstring
  "D1",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
  "D206",
  "D300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.codespell]
write-changes = true

[tool.djlint]
indent = 2
blank_line_before_tag = "block"
