[project]
name = "Manager"
version = "0.1.0"
description = "A next generation website hosting platform"
dependencies = [
    "django",
    "django-tailwind[reload]",
    "psycopg[binary]",
    "social-auth-app-django",
    "typing-extensions",
]

[tool.uv]
package = false
dev-dependencies = [
    "django-stubs[compatible-mypy]",
    "furo",
    "mypy",
    "myst-parser",
    "pre-commit",
    "pytest",
    "pytest-django",
    "sphinx-copybutton",
    "sphinx",
    "pytest-xdist",
]

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "director.apps.*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "director.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "director.settings"
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["media", "migrations"]
testpaths = ["director"]
addopts = "--import-mode=importlib -n auto"
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER"
