[project]
name = "Manager"
version = "0.1.0"
description = "A next generation website hosting platform"
dependencies = [
  "celery",
  "django",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-linear-migrations",
  "heroicons[django]",
  "psycopg[binary]",
  "social-auth-app-django",
  "typing-extensions",
]

[dependency-groups]
dev = [
  "Werkzeug",
  "watchdog",
  "django-fastdev",
  "django-extensions",
  "django-watchfiles",
]

lint = [
  "django-stubs[compatible-mypy]",
  "mypy",
  "pre-commit",
]

test = [
  "pytest",
  "pytest-django",
  "pytest-xdist",
]


[tool.uv]
package = false
default-groups = ["lint", "test", "dev"]

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "director.apps.*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "director.settings"

[tool.djlint]
indent = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "director.settings"
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["media", "migrations"]
testpaths = ["director"]
addopts = "--import-mode=importlib -n auto"
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER"
