[project]
name = "Manager"
version = "0.1.0"
description = "A next generation website hosting platform"
dependencies = [
  "celery",
  "django",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-htmx>=1.21.0",
  "django-linear-migrations",
  "heroicons[django]",
  "pillow",
  "psycopg[binary]",
  "pydantic",
  "redis",
  "requests",
  "social-auth-app-django",
  "typing-extensions",
]

[dependency-groups]
dev = [
  "colorama",
  "django-extensions",
  "django-fastdev",
  "watchdog",
  "werkzeug",
]

lint = [
  "django-stubs",
  "pre-commit",
]

test = [
  "pytest",
  "pytest-django",
  "pytest-xdist",
]


[tool.uv]
package = false
default-groups = ["lint", "test", "dev"]

[tool.django-stubs]
django_settings_module = "director.settings"

[tool.djlint]
indent = 2
preserve_blank_lines = true
blank_line_after_tag="load,extends,include"
ignore="H006"  # Use tailwind w- and h- classes instead

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "director.settings"
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["media", "migrations"]
testpaths = ["director"]
addopts = "--import-mode=importlib -n auto"
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER"
