[project]
name = "Orchestrator"
version = "0.1.0"
description = "A next generation website hosting platform"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "pydantic-extra-types",
    "pyroute2>=0.7.12",
    "python-iptables>=1.0.1",
    "requests",
    "requests-unixsocket",
    "setuptools>=75.3.0",
    "typing-extensions",
]

[dependency-groups]
lint = [
  "mypy",
  "pre-commit",
]
test = [
  "httpx",
  "pytest",
  "pytest-xdist",
]

[tool.uv]
package = false
default-groups = ["lint", "test"]
